# testWinprop

./: .gitignore  2021_7_12.pptx  CMakeLists.txt  LICENSE  README.md  README_last.md  Record.md  indoor_stationary_trajectory_csv.cpp  indoor_stationary_trajectory_str.cpp  indoor_time_invariant.cpp  indoor_time_variant.cpp  indoor_trajectory.cpp  indoor_trajectory_csv.cpp  indoor_trajectory_str.cpp  outdoor_trajectory.cpp  媒体1.mov
data/indoor_stationary_trajectory_csv/: CIR.csv
data/indoor_stationary_trajectory_str/: TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/indoor_time_invariant/: CIR(3.5,0).txt  TX Delay Time.fpt  TX Delay Time.txt  TX LOS.los  TX LOS.txt  TX Power.fpp  TX Power.txt
data/indoor_time_variant/: CIR(3.5,0).csv  CIR(3.5,0).txt  TX Delay Time.fpt  TX Delay Time.txt  TX Power.fpp  TX Power.txt
data/indoor_trajectory/: CIR(3.5,0).csv  CIR.csv  TX Power(0).txt  TX Power(1).txt  TX Power(2).txt  TX Power(3).txt  TX Power(4).txt  TX Power(5).txt  TX Power(6).txt  TX Power(7).txt  TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/indoor_trajectory_csv/: CIR.csv  TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/indoor_trajectory_str/: TX Delay Time.fpt  TX Delay Time.txt  TX Field Strength.fpf  TX Field Strength.txt  TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/outdoor_trajectory/DPM/: TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/outdoor_trajectory/IRT/: TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/outdoor_trajectory/SRT/: TX Power.fpp  TX Power.txt  TX Rays.ray  TX Rays.str
data/test_database/: GlobalMaterialCatalogue.mcb  f_park.idb  f_park.odb  indoor_office [0.00s].idb  indoor_office.idb  indoor_office_stationary.idb  map.osm  preprocess.pre  记录.md
